force-app/main/default/objects/ICU_Target__c/ICU_Target__c.object-meta.xml
<CustomObject>
    <description>Used with the ICU and PCU Teams</description>
    <label>ICU/PCU Target</label>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICU/PCU Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>