force-app/main/default/objects/ICU_Target__c/fields/Account_Age__c.field-meta.xml
<CustomField>
    <fullName>Account_Age__c</fullName>
    <formula>Today () -  Account__r.RecurSoft__Customer_Active_Date__c</formula>
    <label>Account Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>