force-app/main/default/objects/ICU_Target__c/fields/Action_List__c.field-meta.xml
<CustomField>
    <fullName>Action_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action List</label>
    <type>Checkbox</type>
</CustomField>