force-app/main/default/objects/ICU_Target__c/fields/Active_Presence__c.field-meta.xml
<CustomField>
    <fullName>Active_Presence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Presence</label>
    <type>Checkbox</type>
</CustomField>