force-app/main/default/objects/ICU_Target__c/fields/Admin_Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Admin_Active_Status__c</fullName>
    <formula>ISPICKVAL( Account__r.Admin_Status__c , &quot;Yes&quot;)</formula>
    <label>Admin Active Status</label>
    <type>Checkbox</type>
</CustomField>