force-app/main/default/objects/ICU_Target__c/fields/Admin_Username__c.field-meta.xml
<CustomField>
    <fullName>Admin_Username__c</fullName>
    <formula>Account__r.Admin_Username__c</formula>
    <label>Admin Username</label>
    <type>Text</type>
</CustomField>