force-app/main/default/objects/ICU_Target__c/fields/Assist_Requested__c.field-meta.xml
<CustomField>
    <fullName>Assist_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Get&#39;s checked automatically when a Client Engagement rep requests help</description>
    <label>Assist Requested</label>
    <type>Checkbox</type>
</CustomField>