force-app/main/default/objects/ICU_Target__c/fields/Birthdays__c.field-meta.xml
<CustomField>
    <fullName>Birthdays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Birthdays</label>
    <type>Checkbox</type>
</CustomField>