force-app/main/default/objects/ICU_Target__c/fields/Cancel_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Request_Type__c</fullName>
    <formula>Text( Save_Opportunity__r.Cancel_Request_Type__c )</formula>
    <label>Cancel Request Type</label>
    <type>Text</type>
</CustomField>