force-app/main/default/objects/ICU_Target__c/fields/Cases__c.field-meta.xml
<CustomField>
    <fullName>Cases__c</fullName>
    <description>Used to Roll up the number of Cases this ICU Target has associated with it.</description>
    <label># of Cases</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>