force-app/main/default/objects/ICU_Target__c/fields/CS_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>CS_Round_Robin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Round Robin ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CS_Round_Robin__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>ICU Rep</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CS_Round_Robin__c</referenceTo>
    <relationshipLabel>Open Targets</relationshipLabel>
    <relationshipName>ICU_PCU_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>