force-app/main/default/objects/ICU_Target__c/fields/Current_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_Engagement_Score__c</fullName>
    <formula>Account__r.ApptegicEngagement__c</formula>
    <label>Current Engagement Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>