force-app/main/default/objects/ICU_Target__c/fields/Current_SR_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Current_SR_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current SR Subscription</label>
    <referenceTo>RecurSoft__Product_Subscription__c</referenceTo>
    <relationshipLabel>Targets</relationshipLabel>
    <relationshipName>Targets</relationshipName>
    <type>Lookup</type>
</CustomField>