force-app/main/default/objects/ICU_Target__c/fields/Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Dashboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dashboard</label>
    <type>Checkbox</type>
</CustomField>