force-app/main/default/objects/ICU_Target__c/fields/Days_Targeted__c.field-meta.xml
<CustomField>
    <fullName>Days_Targeted__c</fullName>
    <formula>If( ISblank(  Dispositioned_Date__c ) , Today () - Datevalue(CreatedDate), Dispositioned_Date__c - CreatedDate)</formula>
    <label>Days Targeted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>