force-app/main/default/objects/ICU_Target__c/fields/Days_to_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Renewal__c</fullName>
    <formula>Account__r.RecurSoft__Anniversary_Date__c  - Today ()</formula>
    <label>Days to Renewal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>