force-app/main/default/objects/ICU_Target__c/fields/Diagnostic__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic__c</fullName>
    <label>Diagnostic</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Target_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Database connectivity</fullName>
                <color>#0B6FCE</color>
                <label>Database connectivity</label>
            </value>
            <value>
                <fullName>Internet connectivity</fullName>
                <color>#78C953</color>
                <label>Internet connectivity</label>
            </value>
            <value>
                <fullName>Flaky front office computer</fullName>
                <color>#E27001</color>
                <label>Flaky front office computer</label>
            </value>
            <value>
                <fullName>Closed 5 days a week</fullName>
                <color>#A845DC</color>
                <label>Closed 5 days a week</label>
            </value>
            <value>
                <fullName>Environmental issue</fullName>
                <color>#F3D904</color>
                <label>Environmental issue</label>
            </value>
            <value>
                <fullName>Database/PM issue</fullName>
                <color>#A53711</color>
                <label>Database/PM issue</label>
            </value>
            <value>
                <fullName>Office behavior issue</fullName>
                <color>#66E9BD</color>
                <label>Office behavior issue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>