force-app/main/default/objects/ICU_Target__c/fields/Dispositioned_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispositioned_Date__c</fullName>
    <label>Dispositioned Date</label>
    <type>DateTime</type>
</CustomField>