force-app/main/default/objects/ICU_Target__c/fields/Engagement_Score_when_Exiting__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score_when_Exiting__c</fullName>
    <label>Engagement Score when Exiting</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>