force-app/main/default/objects/ICU_Target__c/fields/Eyewear__c.field-meta.xml
<CustomField>
    <fullName>Eyewear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eyewear</label>
    <type>Checkbox</type>
</CustomField>