force-app/main/default/objects/ICU_Target__c/fields/Filters__c.field-meta.xml
<CustomField>
    <fullName>Filters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filters</label>
    <type>Checkbox</type>
</CustomField>