force-app/main/default/objects/ICU_Target__c/fields/Groups__c.field-meta.xml
<CustomField>
    <fullName>Groups__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You must help the office create a Group Template and/or send out a Group message</inlineHelpText>
    <label>Groups</label>
    <type>Checkbox</type>
</CustomField>