force-app/main/default/objects/ICU_Target__c/fields/Jump_Client_Approved__c.field-meta.xml
<CustomField>
    <fullName>Jump_Client_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jump Client Approved</label>
    <type>Checkbox</type>
</CustomField>