force-app/main/default/objects/ICU_Target__c/fields/Jump_Client_Installed__c.field-meta.xml
<CustomField>
    <fullName>Jump_Client_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jump Client Installed</label>
    <type>Checkbox</type>
</CustomField>