force-app/main/default/objects/ICU_Target__c/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <formula>Account__r.Admin_Last_Sync_Date__c</formula>
    <label>Last Sync Date</label>
    <type>Date</type>
</CustomField>