force-app/main/default/objects/ICU_Target__c/fields/Launcher_Version__c.field-meta.xml
<CustomField>
    <fullName>Launcher_Version__c</fullName>
    <label>Launcher Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>