force-app/main/default/objects/ICU_Target__c/fields/Management_System__c.field-meta.xml
<CustomField>
    <fullName>Management_System__c</fullName>
    <formula>Account__r.Practice_Management_Software__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Management System</label>
    <type>Text</type>
</CustomField>