force-app/main/default/objects/ICU_Target__c/fields/Most_Recent_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Contract_Date__c</fullName>
    <formula>Account__r.Probable_Most_Recent_K_Date__c</formula>
    <label>Most Recent Contract Date</label>
    <type>Date</type>
</CustomField>