force-app/main/default/objects/ICU_Target__c/fields/net_Framework_Version__c.field-meta.xml
<CustomField>
    <fullName>net_Framework_Version__c</fullName>
    <label>.net Framework Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>