force-app/main/default/objects/ICU_Target__c/fields/Newsletters__c.field-meta.xml
<CustomField>
    <fullName>Newsletters__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You must create a Newsletter for the office before checking this box</inlineHelpText>
    <label>Newsletters</label>
    <type>Checkbox</type>
</CustomField>