force-app/main/default/objects/ICU_Target__c/fields/Offer_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Offer_Suggestions__c</fullName>
    <inlineHelpText>Please select the offer you feel the office would like the most</inlineHelpText>
    <label>Offer Suggestions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lower MSF</fullName>
            </value>
            <value>
                <fullName>Ipad</fullName>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>Free Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>