force-app/main/default/objects/ICU_Target__c/fields/Office_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Office_Phone_Number__c</fullName>
    <formula>Account__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Phone Number</label>
    <type>Text</type>
</CustomField>