force-app/main/default/objects/ICU_Target__c/fields/Online_Presence__c.field-meta.xml
<CustomField>
    <fullName>Online_Presence__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Formally Xtend Platform</inlineHelpText>
    <label>Online Presence</label>
    <type>Checkbox</type>
</CustomField>