force-app/main/default/objects/ICU_Target__c/fields/Override_Current_SR_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Override_Current_SR_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to put in your own Subscription that will not auto update</inlineHelpText>
    <label>Override Current SR Subscription</label>
    <type>Checkbox</type>
</CustomField>