force-app/main/default/objects/ICU_Target__c/fields/Patient_Portal__c.field-meta.xml
<CustomField>
    <fullName>Patient_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Formally known as SR Portal or SmileDash</inlineHelpText>
    <label>Patient Portal</label>
    <type>Checkbox</type>
</CustomField>