force-app/main/default/objects/ICU_Target__c/fields/PatientReach_Mobile__c.field-meta.xml
<CustomField>
    <fullName>PatientReach_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PatientReach Mobile</label>
    <type>Checkbox</type>
</CustomField>