force-app/main/default/objects/ICU_Target__c/fields/PatientReach_Tablet__c.field-meta.xml
<CustomField>
    <fullName>PatientReach_Tablet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PatientReach Tablet</label>
    <type>Checkbox</type>
</CustomField>