force-app/main/default/objects/ICU_Target__c/fields/PCU_Call_Priority__c.field-meta.xml
<CustomField>
    <fullName>PCU_Call_Priority__c</fullName>
    <inlineHelpText>The Call Priority of the Account when the Target was created</inlineHelpText>
    <label>PCU Call Priority</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>