force-app/main/default/objects/ICU_Target__c/fields/PCU_Type__c.field-meta.xml
<CustomField>
    <fullName>PCU_Type__c</fullName>
    <label>PCU Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Early PCU</fullName>
            </value>
            <value>
                <fullName>Renewal PCU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>