force-app/main/default/objects/ICU_Target__c/fields/Referrals__c.field-meta.xml
<CustomField>
    <fullName>Referrals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referrals</label>
    <type>Checkbox</type>
</CustomField>