force-app/main/default/objects/ICU_Target__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <formula>Account__r.RecurSoft__Anniversary_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>