force-app/main/default/objects/ICU_Target__c/fields/Reports__c.field-meta.xml
<CustomField>
    <fullName>Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reports</label>
    <type>Checkbox</type>
</CustomField>