force-app/main/default/objects/ICU_Target__c/fields/Retention_Probability_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Retention_Probability_Bucket__c</fullName>
    <inlineHelpText>The bucket the account was in when the Target was created</inlineHelpText>
    <label>Retention Probability Bucket</label>
    <length>20</length>
    <type>Text</type>
</CustomField>