force-app/main/default/objects/ICU_Target__c/fields/Save_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Save_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Save Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Enterprise Retention, Retention</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>ICU_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>