force-app/main/default/objects/ICU_Target__c/fields/Save_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Save_Opportunity_Owner__c</fullName>
    <formula>Save_Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; Save_Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Save Opportunity Owner</label>
    <type>Text</type>
</CustomField>