force-app/main/default/objects/ICU_Target__c/fields/Save_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Save_Opportunity_Stage__c</fullName>
    <formula>Text (Save_Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Save Opportunity Stage</label>
    <type>Text</type>
</CustomField>