force-app/main/default/objects/ICU_Target__c/fields/Social_Networking__c.field-meta.xml
<CustomField>
    <fullName>Social_Networking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Networking</label>
    <type>Checkbox</type>
</CustomField>