force-app/main/default/objects/ICU_Target__c/fields/Speed_Test_Results__c.field-meta.xml
<CustomField>
    <fullName>Speed_Test_Results__c</fullName>
    <label>Speed Test Results</label>
    <length>50</length>
    <type>Text</type>
</CustomField>