force-app/main/default/objects/ICU_Target__c/fields/Sub_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Sub_Vertical__c</fullName>
    <formula>Text( Account__r.Sub_Vertical__c )</formula>
    <label>Sub-Vertical</label>
    <type>Text</type>
</CustomField>