force-app/main/default/objects/ICU_Target__c/fields/Surveys__c.field-meta.xml
<CustomField>
    <fullName>Surveys__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surveys</label>
    <type>Checkbox</type>
</CustomField>