force-app/main/default/objects/ICU_Target__c/fields/Sync_Version__c.field-meta.xml
<CustomField>
    <fullName>Sync_Version__c</fullName>
    <label>Sync Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>