force-app/main/default/objects/ICU_Target__c/fields/Target_Count__c.field-meta.xml
<CustomField>
    <fullName>Target_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Allows to aggregate total number of Targets</description>
    <label>Target Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>