force-app/main/default/objects/ICU_Target__c/fields/Target_Status__c.field-meta.xml
<CustomField>
    <fullName>Target_Status__c</fullName>
    <label>Target Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Contact Attempted</fullName>
            </value>
            <value>
                <fullName>Actively Working</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Set Provided</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Assist Requested</fullName>
            </value>
            <value>
                <fullName>Assist Provided</fullName>
            </value>
            <value>
                <fullName>Requeue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>