force-app/main/default/objects/ICU_Target__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <formula>Text(Account__r.Industry)</formula>
    <label>Vertical</label>
    <type>Text</type>
</CustomField>