force-app/main/default/objects/ICU_Target__c/fields/Voice__c.field-meta.xml
<CustomField>
    <fullName>Voice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voice</label>
    <type>Checkbox</type>
</CustomField>