force-app/main/default/objects/ICU_Target__c/fields/Xtend__c.field-meta.xml
<CustomField>
    <fullName>Xtend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Xtend</label>
    <type>Checkbox</type>
</CustomField>