force-app/main/default/objects/ICU_Target__c/recordTypes/ICU_Record.recordType-meta.xml
<RecordType>
    <fullName>ICU_Record</fullName>
    <active>true</active>
    <description>Accounts that have requested to cancel should use this type of Target</description>
    <label>ICU Record</label>
</RecordType>