force-app/main/default/objects/ICU_Target__c/recordTypes/PCU_Record.recordType-meta.xml
<RecordType>
    <fullName>PCU_Record</fullName>
    <active>true</active>
    <description>Used when dealing with Accounts that have a high probability of cancelling</description>
    <label>PCU Record</label>
</RecordType>