force-app/main/default/objects/ICU_Target__c/recordTypes/TCU_Record.recordType-meta.xml
<RecordType>
    <fullName>TCU_Record</fullName>
    <active>true</active>
    <label>TCU Record</label>
</RecordType>