force-app/main/default/objects/ICU_Target__c/validationRules/Jump_Client_Approval_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Jump_Client_Approval_Required</fullName>
    <active>true</active>
    <description>If Jump Client is installed then approval is required</description>
    <errorConditionFormula>Jump_Client_Approved__c  = FALSE &amp;&amp;
 Jump_Client_Installed__c = TRUE</errorConditionFormula>
    <errorDisplayField>Jump_Client_Approved__c</errorDisplayField>
    <errorMessage>You must have approval before installing the jump client.</errorMessage>
</ValidationRule>