force-app/main/default/objects/ICU_Target__c/listViews/All_Deferred_PCU_Targets.listView-meta.xml
<ListView>
    <fullName>All_Deferred_PCU_Targets</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Office_Phone_Number__c</columns>
    <columns>Target_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Dispositioned_Date__c</columns>
    <columns>Renewal_Date__c</columns>
    <columns>Disposition_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ICU_Target__c.PCU_Record</value>
    </filters>
    <filters>
        <field>Target_Status__c</field>
        <operation>equals</operation>
        <value>Deferred</value>
    </filters>
    <label>All Deferred PCU Targets</label>
</ListView>