force-app/main/default/objects/ICU_Target__c/listViews/All_Open_Targets.listView-meta.xml
<ListView>
    <fullName>All_Open_Targets</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Days_Targeted__c</columns>
    <columns>Target_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Save_Opportunity_Stage__c</columns>
    <columns>Cases__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Closed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Open Targets</label>
</ListView>