force-app/main/default/objects/ICU_Target__c/listViews/All_Targets.listView-meta.xml
<ListView>
    <fullName>All_Targets</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Days_Targeted__c</columns>
    <columns>Target_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Save_Opportunity_Stage__c</columns>
    <columns>Cases__c</columns>
    <columns>Save_Opportunity_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Save_Opportunity_Stage__c</field>
        <operation>notEqual</operation>
        <value>cancelled</value>
    </filters>
    <filters>
        <field>Target_Status__c</field>
        <operation>notEqual</operation>
        <value>Declined,Passed</value>
    </filters>
    <label>All Targets</label>
</ListView>