force-app/main/default/objects/ICU_Target__c/listViews/Closed_ICU_Targets.listView-meta.xml
<ListView>
    <fullName>Closed_ICU_Targets</fullName>
    <columns>NAME</columns>
    <columns>Target_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Dispositioned_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ICU_Target__c.ICU_Record</value>
    </filters>
    <filters>
        <field>Closed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Dispositioned_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Closed ICU Targets</label>
</ListView>