force-app/main/default/objects/ICU_Target__c/listViews/My_PCU_Targets1.listView-meta.xml
<ListView>
    <fullName>My_PCU_Targets1</fullName>
    <columns>NAME</columns>
    <columns>Target_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>PCU_Call_Priority__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ICU_Target__c.PCU_Record</value>
    </filters>
    <label>My PCU Targets</label>
</ListView>