force-app/main/default/objects/ICU_Target__c/listViews/Open_PCU_Targets.listView-meta.xml
<ListView>
    <fullName>Open_PCU_Targets</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>PCU_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ICU_Target__c.PCU_Record</value>
    </filters>
    <filters>
        <field>Closed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Open PCU Targets</label>
</ListView>